--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-    <button>Change user</button>
+    <menu>
+      <li>    <button>Change user</button></li>
+      <li>    <button>Go here</button></li>
+      <li>    <button>Go There</button></li>
+      <li>    <button>Go Everywhere</button></li>
+    </menu>
+
     <img src="images/wallpaper.jpg" alt="background image of clouds above the mountaintops"  /> 
     <script src="scripts/main.js"></script>    
 </body>
