--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>Welcome!</h1>
     <menu>
       <li>    <button>Change user</button></li>
-      <li>    <button>Go here</button></li>
-      <li>    <button>Go There</button></li>
-      <li>    <button>Go Everywhere</button></li>
+      <li>    <button onclick="location.href='diceroller.html'">Dice Roller</button></li>
+      <li>    <button>Hold1</button></li>
+      <li>    <button>Hold2</button></li>
     </menu>
 
     <img src="images/wallpaper.jpg" alt="background image of clouds above the mountaintops"  /> 
