--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Welcome!</h1>
     <menu>
-      <li>    <button>Change user</button></li>
+      <li>    <button id="user">Change user</button></li>
       <li>    <button onclick="location.href='diceroller.html'">Dice Roller</button></li>
       <li>    <button>Hold1</button></li>
       <li>    <button>Hold2</button></li>
