--- a/diceroller.html
+++ b/diceroller.html
@@ -10,6 +10,7 @@
     <title>Dice - ejke47</title>
   </head>
   <body>
+    <h1>Try Your Luck!</h1>
     <menu>
       <li>    <button onclick="location.href='index.html'">Home</button></li>
     </menu>
