--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <menu>
       <li>    <button id="user">Change user</button></li>
       <li>    <button onclick="location.href='diceroller.html'">Dice Roller</button></li>
-      <li>    <button>Hold1</button></li>
+      <li>    <button onclick="location.href='tictac.html'">Tic-Tac-Toe</button></li>
       <li>    <button>Hold2</button></li>
     </menu>
-
     <img src="images/wallpaper.jpg" alt="background image of clouds above the mountaintops"  /> 
     <script src="scripts/main.js"></script>    
 </body>
