--- a/diceroller.html
+++ b/diceroller.html
@@ -16,7 +16,7 @@
     </menu>
 
 
-<div class="dicebox">
+<div class="gamewindow">
     <section id="dienum">1</section><section>d</section><section id="sidenum">1</section>
     <menu>
         <li>    <button id="rollem">Roll Dice</button></li>
